DOT: refactor jgraphT parser handling