@@ -1,61 +1,53 @@
 package com.graphinout.reader.jgrapht.dot;
 
 import com.graphinout.base.AbstractReaderTest;
+import com.graphinout.base.GioReader;
 import com.graphinout.base.ReaderTests;
-import com.graphinout.base.gio.GioReader;
-import com.graphinout.base.reader.ContentError;
-import com.graphinout.base.validation.graphml.GraphmlValidator;
 import com.graphinout.foundation.TestFileUtil;
-import com.graphinout.foundation.input.SingleInputSource;
-import com.graphinout.foundation.output.InMemoryOutputSink;
-import com.graphinout.foundation.output.OutputSink;
+import com.graphinout.foundation.input.ContentError;
+import com.graphinout.foundation.input.InputSource;
+import com.graphinout.foundation.input.SingleInputSourceOfString;
 import io.github.classgraph.Resource;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 
 import java.io.IOException;
-import java.io.Writer;
-import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 import static org.slf4j.LoggerFactory.getLogger;
 
-class DotReaderTest2 extends AbstractReaderTest {
+class DotReaderTest extends AbstractReaderTest {
 
-    private static final Logger log = getLogger(DotReaderTest2.class);
+    private static final Logger log = getLogger(DotReaderTest.class);
 
     protected List<ContentError> expectedErrors(String resourceName) {
         if (resourceName.endsWith("Call_Graph.gv")) {
-            return Arrays.asList(new ContentError(ContentError.ErrorLevel.Error, "at line 35:22 extraneous input ',' expecting {'{', '}', GRAPH, NODE, EDGE, SUBGRAPH, NUMBER, STRING, ID, HTML_STRING}", null));
+            return List.of(new ContentError(ContentError.ErrorLevel.Error, "at line 35:22 extraneous input ',' expecting {'{', '}', GRAPH, NODE, EDGE, SUBGRAPH, NUMBER, STRING, ID, HTML_STRING}", null));
         }
         if (resourceName.endsWith("libinput-stack-xorg.gv")) {
-            return Arrays.asList(new ContentError(ContentError.ErrorLevel.Error, "at line 6:15 extraneous input ';' expecting {']', NUMBER, STRING, ID, HTML_STRING}", null));
+            return List.of(new ContentError(ContentError.ErrorLevel.Error, "at line 6:15 extraneous input ';' expecting {']', NUMBER, STRING, ID, HTML_STRING}", null));
         }
         if (resourceName.endsWith("oberon.gv")) {
-            return Arrays.asList(new ContentError(ContentError.ErrorLevel.Error, "at line 32:6 extraneous input ',' expecting {'{', '}', GRAPH, NODE, EDGE, SUBGRAPH, NUMBER, STRING, ID, HTML_STRING}", null));
+            return List.of(new ContentError(ContentError.ErrorLevel.Error, "at line 32:6 extraneous input ',' expecting {'{', '}', GRAPH, NODE, EDGE, SUBGRAPH, NUMBER, STRING, ID, HTML_STRING}", null));
         }
         return Collections.emptyList();
     }
 
     @Override
     protected List<GioReader> readersToTest() {
-        return Arrays.asList(new DotReader());
+        return List.of(new DotReader());
     }
+
 
     @Test
     void test() {
-        // stream incoming test resource as XML to the logger
         GioReader gioReader = new DotReader();
-        ReaderTests.forEachReadableResource(gioReader, resourcePath -> {
-            Writer w = null;
-            InMemoryOutputSink outputSink = OutputSink.createInMemory();
+        ReaderTests.forEachReadableResource(gioReader, resource -> {
             try {
-                ReaderTests.readResourceToSink(gioReader, resourcePath, outputSink);
-                String s = new String(outputSink.getByteBuffer().toByteArray(), StandardCharsets.UTF_8);
-                GraphmlValidator.isValidGraphml(SingleInputSource.of("parsed", s));
-                log.info("Read:\n" + s);
+                String content = resource.getContentAsString();
+                InputSource inputSource = SingleInputSourceOfString.of(resource.getPath(), content);
+                DotReader.readToCjJson(inputSource);
             } catch (IOException e) {
                 throw new RuntimeException(e);
             }
@@ -64,12 +56,12 @@ class DotReaderTest2 extends AbstractReaderTest {
 
     @Test
     void testOneResource() throws IOException {
-        Resource path = TestFileUtil.resource("text/dot/synthetics/synthetic2.dot");
-        InMemoryOutputSink outputSink = OutputSink.createInMemory();
-        ReaderTests.readResourceToSink(new DotReader(), path, outputSink);
-        String s = new String(outputSink.getByteBuffer().toByteArray(), StandardCharsets.UTF_8);
-        GraphmlValidator.isValidGraphml(SingleInputSource.of("parsed", s));
-        log.info("Read:\n" + s);
+        Resource resource = TestFileUtil.resource("text/dot/synthetics/synthetic2.dot");
+        assert resource != null;
+        String content = resource.getContentAsString();
+        InputSource inputSource = SingleInputSourceOfString.of(resource.getPath(), content);
+        DotReader.readToCjJson(inputSource);
+        log.info("Read:\n" + content);
     }
 
 }
